set image size & aspect-ratio to avoid layout shift when loading

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -178,6 +178,7 @@ img {
 .image svg {
     height: 100%;
     width: 100%;
+    aspect-ratio: 1;
 }
 .index_split {
     align-items: start;
